# resume-matcher

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: enrich_mock_jobs.py
src/resume_matcher/: __init__.py  __main__.py
src/resume_matcher/ai/: client.py  prompts.py  schemas.py
src/resume_matcher/cli/: app.py  display.py
src/resume_matcher/cli/commands/: config.py  doctor.py  login.py  parse.py  scan.py
src/resume_matcher/core/: config.py  matcher.py  models.py  resume_parser.py
src/resume_matcher/data/: mock_jobs.json
src/resume_matcher/parsers/: base.py  docx_parser.py  pdf_parser.py  txt_parser.py
src/resume_matcher/web/: app.py
tests/: conftest.py  test_models.py  test_parsers.py
